--- a/package.json
+++ b/package.json
@@ -6,8 +6,19 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
+        "flowbite": "^1.7.0",
         "laravel-vite-plugin": "^0.7.5",
+        "postcss": "^8.4.25",
+        "tailwindcss": "^3.3.2",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-react": "^4.0.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.14.1",
+        "swiper": "^10.0.4"
     }
 }
